--- a/GoTravel/src/css/style.css
+++ b/GoTravel/src/css/style.css
@@ -41,6 +41,7 @@ header {
     text-transform: uppercase;
     background: linear-gradient(to right, #1B59E0 25%, #2C302F 25%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 700;
 }
@@ -205,16 +206,23 @@ header button:hover {
     padding: 0;
     margin: 15px;
     gap: 0;
+    text-align: center;
+    margin-top: 20vh;
 }
 .valuePropositionSection h1 {
     font-family: "Salsa", cursive;
     font-size: 35px;
     text-transform: uppercase;
     font-weight: 700;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 10px;
 }
 .valuePropositionSection p {
-    text-transform: capitalize;
-    font-size: 18px;
+    font-size: 15px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 30px;
 }
 .items {
     display: flex;
@@ -224,8 +232,68 @@ header button:hover {
 }
 .card {
     height: 70vh;
-    background-color: #1B1BE0;
     width: 50vh;
+    border: 1px solid var(--azulPrincipal);
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    text-align: center;
+    cursor: pointer;
+}
+.card img {
+    height: 40px;
+    width: 40px;
+    margin-left: 15px;
+    margin-top: 130px;
+    background: none;
+    padding: 12px;
+    border: 1px solid var(--marfim);
+    border-radius: 20px;
+}
+.card h3 {
+    margin-left: 15px;
+    margin-top: 15px;
+    text-transform: uppercase;
+    font-family: "Salsa", cursive;
+    font-size: 20px;
+    background: none;
+}
+.card p {
+    margin: 15px;
+    margin-top: 15px;
+    font-size: 0;
+    background: none;
+}
+.card:nth-child(1):hover {
+    border: none;
+    background: linear-gradient(rgba(10, 25, 47, 0.8), rgba(60, 0, 80, 0.8) ), url('../assets/card1.png');
+    background-size: cover;
+    background-position: center;
+    color: var(--marfim);
+}
+.card:nth-child(2):hover {
+    border: none;
+    background: linear-gradient(rgba(10, 25, 47, 0.8), rgba(60, 0, 80, 0.8) ), url('../assets/card3.png');
+    background-size: cover;
+    background-position: center;
+    color: var(--marfim);
+}
+.card:nth-child(3):hover {
+    border: none;
+    background: linear-gradient(rgba(10, 25, 47, 0.8), rgba(60, 0, 80, 0.8) ), url('../assets/card2.png');
+    background-size: cover;
+    background-position: center;
+    color: var(--marfim);
+}
+.card:hover img {
+    background-color: var(--marfim);
+}
+.card:hover h3 {
+    color: var(--marfim);
+}
+.card:hover p {
+    font-size: 12px;
+    color: var(--marfim);
 }
 .discountsSection {
     display: flex;
@@ -233,8 +301,12 @@ header button:hover {
     align-items: center;
     margin: 15px;
     margin-top: 20vh;
+    justify-content: space-between;
+    flex-direction: top;
 }
 .discountsSection aside {
+    align-items: center;
+    display: flex;
     align-items: start;
     flex-direction: column;
 }
@@ -245,13 +317,99 @@ header button:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vh;
-    border: 2px solid var(--azulOceano);
+    width: 100%;
+    height: 100%;
     flex-direction: column;
+    gap: 0;
+    margin: 0;
+    padding: 0;
 }
-.headLine p:nth-child(1)  {
+.line1, .line2, .line3 {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.line1 p:nth-child(1) {
+    font-family: "Salsa", cursive;
+    font-size: 50px;
+}
+.line1 p:nth-child(2) {
+    font-size: 12px;
+    font-weight: 800;
+}
+.line2 p:nth-child(1) {
+    font-family: "Salsa", cursive;
+    font-size: 50px;
+}
+.line3 p:nth-child(1) {
+    font-size: 12px;
+    font-weight: 800;
+}
+.line3 p:nth-child(2) {
+    font-family: "Salsa", cursive;
+    font-size: 50px;
+}
+.headLine button {
+  cursor: pointer;
+  background: linear-gradient(rgba(255, 255, 240, 0.6), rgba(255, 255, 240, 0.6)), url('../assets/nuvem-e-ceu-azul.jpg');
+  background-size: cover;
+  background-position: center;
+  padding: 20px;
+  width: 100%;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 800;
+
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--azulPrincipal);
+    height: 20vh;
+    width: auto;
+    border-radius: 0;
+    margin: 0;
+    margin-top: 15vh;
+}
+footer h2 {
     font-family: "Salsa", cursive;
     font-size: 35px;
     text-transform: uppercase;
+    background: linear-gradient(to right, var(--marfim) 30%, #2C302F 20%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-weight: 700;
+    margin-left: 15px;
+}
+footer h3 {
+    text-transform: uppercase;
+    font-weight: 500;
+    background: none;
+    color: var(--marfim);
+}
+.contact-email {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 5px;
+    background: none;
+    margin-right: 15px;
+}
+.contact-email label {
+    color: var(--marfim);
+    background: none;
+}
+.contact-email input {
+    border: none;
+}
+.contact-email button {
+    border: none;
+    background-color: var(--destaqueCiano);
+    color: var(--azulOceano);
+}
+.contact-email button:hover {
+    background-color: var(--marfim);
+    color: var(--destaqueRoxo);
 }
